# multi-agent

./: .gitignore  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.ai-sessions/: latest-resume.json  latest-resume.md  resume-history.jsonl
.github/ISSUE_TEMPLATE/: agent_submission.md
.github/workflows/: ci.yml
catalog/_enhancements/: confidence.yaml  context_management.yaml  error_recovery.yaml  failure_modes.yaml  information_priority.yaml  reasoning.yaml  tool_discipline.yaml  verification.yaml
catalog/code/: code-generator.yaml  code-reviewer.yaml  debugger.yaml  documentation-writer.yaml  pr-summarizer.yaml  refactorer.yaml  security-auditor.yaml  test-writer.yaml
catalog/content/: editor.yaml  seo-optimizer.yaml  translator.yaml  writer.yaml
catalog/data/: data-analyst.yaml  report-writer.yaml  sql-generator.yaml
catalog/devops/: ci-cd-agent.yaml  incident-responder.yaml  infra-provisioner.yaml  monitoring-agent.yaml
catalog/finance/: financial-reporter.yaml  fraud-detector.yaml  portfolio-optimizer.yaml  tax-advisor.yaml  trading-analyst.yaml
catalog/legal/: compliance-checker.yaml  contract-reviewer.yaml  document-drafter.yaml  legal-researcher.yaml
catalog/orchestration/: cost-optimizer.yaml  quality-gate.yaml  task-router.yaml
catalog/personal/: email-assistant.yaml  meeting-scheduler.yaml  note-taker.yaml  task-manager.yaml
catalog/research/: competitive-intel.yaml  deep-researcher.yaml  fact-checker.yaml  paper-analyst.yaml  web-scraper.yaml
catalog/security/: access-reviewer.yaml  incident-analyst.yaml  log-analyzer.yaml  vulnerability-scanner.yaml
catalog/support/: customer-support.yaml  escalation-agent.yaml  knowledge-base-builder.yaml  ticket-router.yaml
cookbook/: 01-getting-started.md  02-build-code-review-team.md  03-research-pipeline.md  04-smart-enhancements.md  05-export-everywhere.md  06-cost-optimization.md  07-framework-template-plans.md  08-human-review-gates.md
docs/frameworks/: comparison.md
docs/i18n/: README.da.md  README.de.md  README.es.md  README.ja.md  README.ko.md  (+1 more)
tests/: test_adapter_templates.py  test_catalog.py  test_cli.py  test_enhance.py  test_eval.py  test_export.py  test_framework_targets.py  test_router.py  test_routing_eval.py  test_web_data.py
web/: catalog-data.js  index.html
(+43 files in other folders)
